--- a/css/sync.css
+++ b/css/sync.css
@@ -13,7 +13,7 @@
 }
 
 .exercises-sync {
-  background-color: orange;
+  background-color: #EAEAEA;
   display: inline;
   float: right;
   height: 80%;
@@ -34,8 +34,9 @@
   display: inline;
   height: 100%;
   width: 30%;
-  background-color: purple;
+  background-color: #EAEAEA;
   margin: 0 auto;
+  /* padding-top: 5vh !important; */
   /* z-index: 4; */
 }
 
@@ -78,23 +79,190 @@ table {
 .form-text {
   display: inline;
   font-weight: 300;
+  font-size: 30px;
+  padding-left: 10vw;
+  /* z-index: 5; */
 }
 
 #max-input-sync {
-  background-color: purple;
+  background-color: #EAEAEA;
+
   width: 100%;
   height: 20vh;
+
 }
 
 
-select {
+/* select {
   margin-bottom: 5vh;
+} */
+
+
+/* Sync-Page Code
+*/
+
+.sync-container {
+  background-color: #EAEAEA;
+
+  width: 100%;
+  height: 70vh;
 }
 
+.sync-max-input {
+  float: left;
+  /* background-color: green; */
+  height: 98.3%;
+  width: 31%;
+  border-right: 1vh solid black;
+  border-left: 1vh solid black;
+  border-bottom: 1vh solid black;
+  z-index: 2;
+  /* border-right: 1vh solid black; */
 
+}
 
+.sync-exercise-choice {
+  float: left;
+  /* background-color: blue; */
+  height: 98.3%;
+  width: 33%;
+  border-right: 1vh solid black;
+  border-bottom: 1vh solid black;
 
+}
 
+.sync-date-other {
+  float: left;
+  background-color: #EAEAEA;
+  height: 98.3%;
+  width: 33%;
+  border-right: 1vh solid black;
+  border-bottom: 1vh solid black;
 
+}
+
+.sync-prompt {
+  background-color: black;
+  width: 100%;
+  height: 10vh;
+}
+
+.max-input {
+  background-color: white;
+  width: 100%;
+  width: 100%;
+  height: 55vh;
+}
+
+.white-h1 {
+  color: white;
+  font-weight: 300;
+  padding-left: 4vw;
+  padding-top: 4vh;
+}
+
+#maxes {
+  padding-left: 8vw;
+}
+
+#extras {
+  padding-left: 10vw;
+}
+
+.sync-liftName {
+  background-color: #EAEAEA;
+  width: 100%;
+  height: 6vh;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+}
+
+.bigThree-sync {
+  width: 98.8%;
+  height: 5vh;
+  font-size: 34px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.fill {
+  background-color: #EAEAEA;
+  width: 100%;
+  height:11.4vh;
+}
+
+/* .fill2 {
+  background-color: #EAEAEA;
+  width: 100%;
+  height: 10vh;
+} */
+
+.sync-a-name {
+  background-color: #EAEAEA;
+  width: 100%;
+  height: 5vh;
+}
+
+.form-a-name {
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+  padding-top: 1vh;
+}
+
+.sync-dropdown {
+  width: 100%;
+  height: 5vh;
+  /* margin-bottom: 3v */
+  text-align: center !important;
+}
+
+.centerDropdown {
+  /* display: center ; */
+  text-align: center !important;
+}
+
+.center {
+  text-align: center;
+}
+
+.sync-radio {
+  background-color: #EAEAEA;
+  width: 100%;
+  height: 5vh;
+}
+
+#start {
+  padding-left: 9vw;
+  /* padding-top: 105vh; */
+}
+
+.date-input {
+  width: 60%;
+  height: 10vh;
+  /* background-color: blue; */
+  margin: 0 auto;
+}
+
+#date {
+  width: 100%;
+  margin-top: 2vh;
+}
+
+#submit {
+  width: 50%;
+  margin: 0 auto;
+  height: 10vh;
+  /* background-color: blue; */
+}
+
+.subButton {
+  height: 50%;
+  width: 100%;
+  background-color: black;
+  color: white;
+  /* font-family:  */
+  font-size: 24px;
+}
 
 /* dasf */
